<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.android.freddyfazbearspizza.MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/fnaflogofreddy" />

    <TextView
        android:id="@+id/storeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_margin="20dp"
        android:text="Freddy Fazbear's Pizza"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/LargeText"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/storeName"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StreetAddress"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/MediumText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CityStateZip"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/MediumText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WebAddress"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/MediumText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/PhoneNumber"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/MediumText" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/ReviewOne"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/SmallText" />

</RelativeLayout>
